Compilation fixes and add limelight